# custom_malis

./: .gitmodules  CMakeLists.txt  README.md
conda-recipe/: build.sh  meta.yaml
include/custom_malis/: custom_malis.hxx
src/: CMakeLists.txt
src/python/lib/: CMakeLists.txt  custom_malis.cxx  malis.cxx
src/python/module/custom_malis/: __init__.py
src/python/test/: test_malis.py
src/test/: CMakeLists.txt  test_malis.cxx
